@@ -9,6 +9,7 @@ ___________________________________________________________
 -- Recommended PHP version changed to 5.4.0
 
 -> Added caching support for a given number of seconds [ttl] (hajo)
+-> Added caching support for wincache extension (hajo)
 -> Added forwarding support to messages mod (fr33z3m4n)
 -> Fixed email line-endings and user email activation issues (hajo)
 -> Fixed language switching problems (hajo)
